<resources>
    <string name="app_name">Vendas Bruno</string>
    <string name="action_settings">Settings</string>
    <string name="string_descricao">Descrição</string>
    <string name="string_name">Nome</string>
    <string name="string_cadastrar_categoria">Cadastrar Categoria</string>
    <string name="string_codigo">Código</string>
    <string name="string_salvar">Salvar</string>
    <string name="string_cadastrar_transportadora">Cadastrar Transportadora</string>
    <string name="title_activity_main">Menu</string>
    <string name="title_activity_login">Acessar</string>
    <string name="title_activity_category">Categoria</string>
    <string name="title_activity_transportadora">Transportadora</string>
    <string name="string_telefone">Telefone</string>
    <string name="string_categoria">Categoria</string>
    <string name="string_transportadora">Transportadora</string>
    <string name="string_produto">Produto</string>
    <string name="title_activity_produto">Produtos</string>
    <string name="string_cadastrar_produto">Cadastrar Produto</string>
    <string name="string_sair">Sair</string>
    <string name="string_quantidade">Quantidade</string>
    <string name="string_quantidade_estoque">Qtd Estoque</string>
    <string name="string_quantidade_ordem">Qtd Ordem</string>
    <string name="string_valor_unitario">Valor Unitário</string>
    <string name="string_reoder_level">Nível de Reabastecimento</string>
    <string name="string_status_produto">Status Produto</string>
    <string name="title_activity_cliente">Cliente</string>
    <string name="string_cadastrar_cliente">Cadastrar Cliente</string>
    <string name="string_nome_da_companhia">Nome da Companhia</string>
    <string name="string_nome_de_contato">Nome de Contato</string>
    <string name="string_titulo_do_contato">Titulo do Contato</string>
    <string name="string_endereco">Endereço</string>
    <string name="string_bairro">Bairro</string>
    <string name="string_cidade">Cidade</string>
    <string name="string_cep">CEP</string>
    <string name="string_pais">País</string>
    <string name="string_fax">Fax</string>
    <string name="title_activity_fornecedor">Fornecedor</string>
    <string name="string_cadastrar_fornecedor">Cadastrar Fornecedor</string>
    <string name="string_site">Site</string>
    <string name="title_activity_funcionario">Funcionario</string>
    <string name="string_cadastrar_funcionario">Cadastrar Funcionario</string>
    <string name="string_sobrenome">Sobrenome</string>
    <string name="string_titulo">Título</string>
    <string name="string_titulo_de_cortesia">Título de Cortesia</string>
    <string name="string_data_de_nascimento">Data de Nascimento</string>
    <string name="string_data_de_contratacao">Data de Contratação</string>
    <string name="string_salario">Salário</string>
    <string name="string_categorias_cadastradas">Categorias Cadastradas</string>
    <string name="string_transportadoras_cadastradas">Transportadoras Cadastradas</string>
</resources>
