<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.carlosaurelio.vendasbruno.activities.CategoriaActivity"
    tools:showIn="@layout/activity_category">


    <LinearLayout
        android:id="@+id/layoutLinear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/string_cadastrar_categoria"
            android:textSize="25sp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lCodigoCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtCategoryId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_codigo"
                android:inputType="number"
                android:paddingTop="5dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lNomeCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtCategoryName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_name"
                android:inputType="text|textCapSentences"
                android:paddingTop="5dp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lDescricaoCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_descricao"
                android:inputType="text|textMultiLine|textCapSentences"
                android:paddingTop="5dp"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onClickSalvarCategoria"
            android:text="@string/string_salvar"/>

        <TextView
            android:id="@+id/txtList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/string_categorias_cadastradas"
            android:textSize="25sp"/>

        <ListView
            android:id="@+id/lvCustomList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>


</RelativeLayout>

