<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/content_fornecedor"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.carlosaurelio.vendasbruno.activities.FornecedorActivity"
    tools:showIn="@layout/activity_fornecedor">

    <LinearLayout
        android:id="@+id/layoutLinear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/string_cadastrar_fornecedor"
            android:textSize="25sp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lCodigoFornecedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/edtCodigoFornecedor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_codigo"
                android:inputType="number"
                android:paddingTop="5dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lNomeCompanhiaFornecedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/edtNomeCompanhiaFornecedor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_nome_da_companhia"
                android:inputType="text|textCapSentences"
                android:paddingTop="5dp"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lNomeContatoFornecedor"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/edtNomeContatoFornecedor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/string_nome_de_contato"
                    android:inputType="text|textCapSentences"
                    android:paddingTop="5dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lTituloFornecedor"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/edtTituloFornecedor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/string_titulo_do_contato"
                    android:inputType="text|textCapSentences"
                    android:paddingTop="5dp"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lEnderecoFornecedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/edtEnderecoFornecedor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_endereco"
                android:inputType="text|textCapSentences"
                android:paddingTop="5dp"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lBairroFornecedor"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/edtBairroFornecedor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/string_bairro"
                    android:inputType="text|textCapSentences"
                    android:paddingTop="5dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lCidadeFornecedor"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/edtCidadeFornecedor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/string_cidade"
                    android:inputType="text|textCapSentences"
                    android:paddingTop="5dp"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lCepFornecedor"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/edtCepFornecedor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/string_cep"
                    android:inputType="text|textCapSentences"
                    android:paddingTop="5dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lPaisFornecedor"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/edtPaisFornecedor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/string_pais"
                    android:inputType="text|textCapSentences"
                    android:paddingTop="5dp"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lTelefoneFornecedor"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/edtTelefoneFornecedor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/string_telefone"
                    android:inputType="text|textCapSentences"
                    android:paddingTop="5dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lFaxFornecedor"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/edtFaxFornecedor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/string_fax"
                    android:inputType="text|textCapSentences"
                    android:paddingTop="5dp"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lSiteFornecedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/edtSiteFornecedor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_site"
                android:inputType="text"
                android:paddingTop="5dp"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onClickSalvarFornecedor"
            android:text="@string/string_salvar"/>

    </LinearLayout>

</ScrollView>
