<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.carlosaurelio.vendasbruno.activities.ProdutoActivity"
    tools:showIn="@layout/activity_produto">

    <LinearLayout
        android:id="@+id/layoutLinear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/string_cadastrar_produto"
            android:textSize="25sp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lCodigoPrdotuo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/edtCodigoProduto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_codigo"
                android:inputType="number"
                android:paddingTop="5dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lNomeProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/edtNomeProduto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_name"
                android:inputType="text|textCapSentences"
                android:paddingTop="5dp"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lQuantidade"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/edtQuantidadeProduto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/string_quantidade"
                    android:inputType="number"
                    android:paddingTop="5dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lQuantidadeEstoque"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/edtQuantidadeEstoqueProduto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/string_quantidade_estoque"
                    android:inputType="number"
                    android:paddingTop="5dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lQuantidadeOrdem"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/edtQuantidadeOrdemProduto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/string_quantidade_ordem"
                    android:inputType="number"
                    android:paddingTop="5dp"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/lPrecoProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/edtPrecoProduto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_valor_unitario"
                android:inputType="numberDecimal"
                android:paddingTop="5dp"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lNivelReabastecimento"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/edtNivelReabastecimento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/string_reoder_level"
                    android:inputType="number"
                    android:paddingTop="5dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lProdutoAtivo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/edtProdutoAtivo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/string_status_produto"
                    android:inputType="number"
                    android:paddingTop="5dp"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onClickSalvarProduto"
            android:text="@string/string_salvar"/>

    </LinearLayout>

</ScrollView>
