<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.carlosaurelio.vendasbruno.activities.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnProdutos"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:drawablePadding="6dp"
                android:drawableTop="@drawable/ic_product"
                android:onClick="onClickProdutos"
                android:padding="6dp"
                android:text="@string/string_produto"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btnCadastrarTransportadora"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:drawablePadding="6dp"
                android:drawableTop="@drawable/ic_shipper"
                android:onClick="onClickTransportadora"
                android:padding="6dp"
                android:text="@string/string_transportadora"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCliente"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:drawablePadding="6dp"
                android:drawableTop="@drawable/ic_customers"
                android:onClick="onClickCliente"
                android:padding="6dp"
                android:text="@string/title_activity_cliente"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btnCadastrarCategoria"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:drawablePadding="6dp"
                android:drawableTop="@drawable/ic_category"
                android:onClick="onClickCategoria"
                android:padding="6dp"
                android:text="@string/string_categoria"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCadastrarFornecedores"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:drawablePadding="6dp"
                android:drawableTop="@drawable/ic_suppliers"
                android:onClick="onClickFornecedor"
                android:padding="6dp"
                android:text="@string/title_activity_fornecedor"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btnCadastrarFuncionario"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:drawablePadding="6dp"
                android:drawableTop="@drawable/ic_employee"
                android:onClick="onClickFuncionario"
                android:padding="6dp"
                android:text="@string/title_activity_funcionario"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
